# FID-Evaluator

./: .gitignore  LICENSE  README.md  Testing-FID.ipynb  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
src/: features.py  fid.py  main.py  pca.py
test/: test_features.py  test_fid.py  test_pca.py
